test(mvp): robust AppointmentController tests with dynamic workOption IDs and transactional isolation